Rearranged UI to stories before life practices section. Included 4 stories to Story Time: Frail, Product Lessons, Surge and Social Media.

--- a/single-template.html
+++ b/single-template.html
@@ -170,8 +170,8 @@
                         </div>
                     </div>
                     <div class="col-lg-4">
-                         <img src="assets/images/dogs.gif" height="250px" alt="" class="nk-img-fit">
-
+                         <img src="assets/images/frail.jpg" alt="" class="nk-img-fit">
+                         <p> <small>Image source: Pascal Campion</small></p>
                     </div>
                 </div>
                 <div class="nk-gap-4 mt-14"></div>
