--- a/surge.html
+++ b/surge.html
@@ -159,64 +159,35 @@
             <div class="nk-portfolio-single">
 
                 <div class="nk-gap-4 mb-14"></div>
-                <h1 class="nk-portfolio-title display-4">Frail</h1>
+                <h1 class="nk-portfolio-title display-4">Deploy Your Website with Ease</h1>
                 <div class="row vertical-gap">
                     <div class="col-lg-8">
                         <div class="nk-portfolio-info">
                             <div class="nk-portfolio-text">
-                                <p>What do you do when your heart breaks?
-                                    <br>
-                                    <br>
-                                    When you hear the crack within the walls,
-                                    <br>
-                                    And feel the blood spill out as it beats.
-                                    <br>
-                                    <br>                                     
-                                    Rejected <br><br>
-
-                                    Alone <br><BR>
-
-                                    Misunderstood <BR><BR>
-
-                                    Ignored <br><br>
-
-                                    I ask, <br>
-                                    I cry, <br>
-                                    I shout and still… <br>
-                                    I remain unheard. <br><br>
-
-                                    What’s louder than your silence? <br>
-                                    Nothing. <br><br>
-                                     
-                                    If only you would hear me the way I hear... <br>
-                                    Silence. <br><br>
-
-                                    See the hidden parts of me, <br>
-                                    And turn your head away. <br><br>
-
-                                    Am I not enough? <br><br>
-
-                                    If I show you all that I am, <br>
-                                    Will you turn back toward me, <br>
-                                    And show me more of you too? <br><br>
-
-                                    Am I not deserving? <br><br>
-
-                                    If I cannot be seen, <br>
-                                    Perhaps, <br>
-                                    I am not here. <br><br><br><br><br>
-
-
-                                    Nya Wira
-                                    </p>
-                                
+                                <p style="line-height: 1.38; margin-top: 0pt; margin-bottom: 0pt;"><span style="font-size: 11pt; font-family: Arial; color: #000000; background-color: transparent; font-weight: 400; font-variant: normal; text-decoration: none; vertical-align: baseline; white-space: pre-wrap;">An absolute fave from 2017, Surge is the perfect tool to deploy your front-end changes to the web, from the command line! Surge is a front-end deployment tool that helps you push changes to your front-end/website from your command line. </span></p>
+<p style="line-height: 1.38; margin-top: 0pt; margin-bottom: 0pt;">&nbsp;</p>
+<p style="line-height: 1.38; margin-top: 0pt; margin-bottom: 0pt;"><span style="font-size: 11pt; font-family: Arial; color: #000000; background-color: transparent; font-weight: 400; font-variant: normal; text-decoration: none; vertical-align: baseline; white-space: pre-wrap;">It literally takes me a few seconds to deploy changes to my websites/web projects (this one included) thanks to surge. They also create random domains if you would like to see what your site looks like before updating your actual domain. </span></p>
+<p style="line-height: 1.38; margin-top: 0pt; margin-bottom: 0pt;">&nbsp;</p>
+<p style="line-height: 1.38; margin-top: 0pt; margin-bottom: 0pt;"><span style="font-size: 11pt; font-family: Arial; color: #000000; background-color: transparent; font-weight: 400; font-variant: normal; text-decoration: none; vertical-align: baseline; white-space: pre-wrap;">If you&rsquo;re like me, working with web pages (HTML, CSS, Javascript) from time to time then this will make your adding changes to the web a whole lot easier! They also have lots of support for whichever dependencies you work with.</span></p>
+<h2 style="line-height: 1.38; margin-top: 18pt; margin-bottom: 6pt;"><span style="font-size: 16pt; font-family: Arial; color: #000000; background-color: transparent; font-weight: 400; font-variant: normal; text-decoration: none; vertical-align: baseline; white-space: pre-wrap;">Typical Deployment Process with Surge:</span></h2>
+<ol style="margin-top: 0pt; margin-bottom: 0pt;">
+<li style="list-style-type: decimal; font-size: 11pt; font-family: Arial; color: #000000; background-color: transparent; font-weight: 400; font-variant: normal; text-decoration: none; vertical-align: baseline; white-space: pre;"><span style="font-size: 11pt; font-family: Arial; color: #000000; background-color: transparent; font-weight: 400; font-variant: normal; text-decoration: none; vertical-align: baseline; white-space: pre-wrap;">Work on your files on your local machine</span></li>
+<li style="list-style-type: decimal; font-size: 11pt; font-family: Arial; color: #000000; background-color: transparent; font-weight: 400; font-variant: normal; text-decoration: none; vertical-align: baseline; white-space: pre;"><span style="font-size: 11pt; font-family: Arial; color: #000000; background-color: transparent; font-weight: 400; font-variant: normal; text-decoration: none; vertical-align: baseline; white-space: pre-wrap;">Open your command line</span></li>
+<li style="list-style-type: decimal; font-size: 11pt; font-family: Arial; color: #000000; background-color: transparent; font-weight: 400; font-variant: normal; text-decoration: none; vertical-align: baseline; white-space: pre;"><span style="font-size: 11pt; font-family: Arial; color: #000000; background-color: transparent; font-weight: 400; font-variant: normal; text-decoration: none; vertical-align: baseline; white-space: pre-wrap;">Head to your folder with the webpages</span></li>
+<li style="list-style-type: decimal; font-size: 11pt; font-family: Arial; color: #000000; background-color: transparent; font-weight: 400; font-variant: normal; text-decoration: none; vertical-align: baseline; white-space: pre;"><span style="font-size: 11pt; font-family: Arial; color: #000000; background-color: transparent; font-weight: 400; font-variant: normal; text-decoration: none; vertical-align: baseline; white-space: pre-wrap;">Surge</span></li>
+<li style="list-style-type: decimal; font-size: 11pt; font-family: Arial; color: #000000; background-color: transparent; font-weight: 400; font-variant: normal; text-decoration: none; vertical-align: baseline; white-space: pre;"><span style="font-size: 11pt; white-space: pre-wrap; line-height: 1.3; background-color: transparent;">--optional domain to view your site--- Or change it to your actual domain name.</span></li>
+<li style="list-style-type: decimal; font-size: 11pt; font-family: Arial; color: #000000; background-color: transparent; font-weight: 400; font-variant: normal; text-decoration: none; vertical-align: baseline; white-space: pre;"><span style="font-size: 11pt; font-family: Arial; color: #000000; background-color: transparent; font-weight: 400; font-variant: normal; text-decoration: none; vertical-align: baseline; white-space: pre-wrap;">Hit enter</span></li>
+</ol>
+<p>&nbsp;</p>
+<p style="line-height: 1.38; margin-top: 0pt; margin-bottom: 0pt;"><span style="font-size: 11pt; font-family: Arial; color: #000000; background-color: transparent; font-weight: 400; font-variant: normal; text-decoration: none; vertical-align: baseline; white-space: pre-wrap;">Bam! Uploads everything in seconds! </span></p>
+<p style="line-height: 1.38; margin-top: 0pt; margin-bottom: 0pt;">&nbsp;</p>
+<p style="line-height: 1.38; margin-top: 0pt; margin-bottom: 0pt;"><span style="font-size: 11pt; font-family: Arial; color: #000000; background-color: transparent; font-weight: 400; font-variant: normal; text-decoration: none; vertical-align: baseline; white-space: pre-wrap;">Surge your front-end to the future! Head over to </span><a style="text-decoration: none;" href="https://surge.sh/"><span style="font-size: 11pt; font-family: Arial; color: #1155cc; background-color: transparent; font-weight: 400; font-variant: normal; text-decoration: underline; -webkit-text-decoration-skip: none; text-decoration-skip-ink: none; vertical-align: baseline; white-space: pre-wrap;">their website</span></a><span style="font-size: 11pt; font-family: Arial; color: #000000; background-color: transparent; font-weight: 400; font-variant: normal; text-decoration: none; vertical-align: baseline; white-space: pre-wrap;"> to learn more and install.</span></p>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-4">
-                         <img src="assets/images/frail.jpg" alt="" class="nk-img-fit">
-                         <p> <small>Image source: Pascal Campion</small></p>
-
+                         <img src="assets/images/surge-logo.png" alt="" class="nk-img-fit">
+                         <p> <small>Image Source: Surge (Logo)</small></p>
                     </div>
                 </div>
                 <div class="nk-gap-4 mt-14"></div>
@@ -229,12 +200,12 @@
         <!-- START: Pagination -->
         <div class="nk-pagination nk-pagination-center">
             <div class="container">
-                <a class="nk-pagination-prev" href="surge.html">
+                <a class="nk-pagination-prev" href="product-lessons.html">
                     <span class="pe-7s-angle-left"></span> Previous </a>
                 <a class="nk-pagination-center" href="#">
                     <span class="nk-icon-squares"></span>
                 </a>
-                <a class="nk-pagination-next" href="social-no-more.html">Next <span class="pe-7s-angle-right"></span> </a>
+                <a class="nk-pagination-next" href="frail.html">Next <span class="pe-7s-angle-right"></span> </a>
             </div>
         </div>
         <!-- END: Pagination -->
