Added 'Ode to Afro Beats' poem

--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
                                     <div class="nk-blog-post">
                                         <div class="nk-post-thumb">
                                             <a href="social-no-more.html">
-                                                <img src="assets/images/social.jpg" alt="" class="nk-img-stretch">
+                                                <img src="assets/images/social.jpg" alt="" class="nk-img-fit">
                                             </a>
                                             <div class="nk-post-category"><a href="social-no-more.html">Challenge</a></div>
                                         </div>
@@ -399,7 +399,7 @@
                                     <div class="nk-blog-post">
                                         <div class="nk-post-thumb">
                                             <a href="product-lessons.html">
-                                                <img src="assets/images/firsts.jpg" alt="" class="nk-img-stretch">
+                                                <img src="assets/images/firsts.jpg" alt="" class="nk-img-fit">
                                             </a>
                                             <div class="nk-post-category"><a href="#">Product</a></div>
                                         </div>
@@ -425,7 +425,7 @@
                                     <div class="nk-blog-post">
                                         <div class="nk-post-thumb">
                                             <a href="surge.html">
-                                                <img src="assets/images/surge-logo.png" alt="" class="nk-img-stretch">
+                                                <img src="assets/images/surge-logo.png" alt="" class="nk-img-fit">
                                             </a>
                                             <div class="nk-post-category"><a href="#">Dev Tools</a></div>
                                         </div>
@@ -470,56 +470,56 @@
                         </div>
 
 
-                       <!--  <div>
+                        <div>
                             <div>
                                 <div class="pl-15 pr-15">
                                     <div class="nk-blog-post">
                                         <div class="nk-post-thumb">
-                                            <a href="blog-single.html">
-                                                <img src="assets/images/post-6-mid.jpg" alt="" class="nk-img-stretch">
+                                            <a href="positive wallpaper.html">
+                                                <img src="assets/images/Positive Wallpaper.jpg" alt="" class="nk-img-fit">
                                             </a>
                                             <div class="nk-post-category"><a href="#">Design</a></div>
                                         </div>
-                                        <h2 class="nk-post-title h4"><a href="blog-single.html">Why you should Always First</a></h2>
+                                        <h2 class="nk-post-title h4"><a href="positive wallpaper.html">Choose to Focus on Positivity</a></h2>
 
                                         <div class="nk-post-date">
-                                            August 14, 2016
+                                            
                                         </div>
 
                                         <div class="nk-post-text">
-                                            <p>Lights give have herb. First. Seed lesser his a fruit. Stars good divide fish appear don't, third deep.</p>
+                                            <p>A free wallpaper for your laptop :) </p>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="nk-gap-1"></div>
                             </div>
                         </div>
- -->
 
-                       <!--  <div>
+
+                        <div>
                             <div>
                                 <div class="pl-15 pr-15">
                                     <div class="nk-blog-post">
                                         <div class="nk-post-thumb">
-                                            <a href="blog-single.html">
-                                                <img src="assets/images/post-6-mid.jpg" alt="" class="nk-img-stretch">
+                                            <a href="afro-beats.html">
+                                                <img src="assets/images/angu_walters.jpg" alt="" class="nk-img-fit">
                                             </a>
-                                            <div class="nk-post-category"><a href="#">Design</a></div>
+                                            <div class="nk-post-category"><a href="#">Poetry</a></div>
                                         </div>
-                                        <h2 class="nk-post-title h4"><a href="blog-single.html">Why you should Always First</a></h2>
+                                        <h2 class="nk-post-title h4"><a href="afro-beats.html">An Ode To Afro Beats</a></h2>
 
                                         <div class="nk-post-date">
-                                            August 14, 2016
+                                            
                                         </div>
 
                                         <div class="nk-post-text">
-                                            <p>Lights give have herb. First. Seed lesser his a fruit. Stars good divide fish appear don't, third deep.</p>
+                                            <p>I love it!</p>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="nk-gap-1"></div>
                             </div>
-                        </div> -->
+                        </div>
 
                     </div>
 
