--- a/social-no-more.html
+++ b/social-no-more.html
@@ -222,7 +222,7 @@
         <!-- START: Pagination -->
         <div class="nk-pagination nk-pagination-center">
             <div class="container">
-                <a class="nk-pagination-prev" href="frail.html">
+                <a class="nk-pagination-prev" href="afro-beats.html">
                     <span class="pe-7s-angle-left"></span> Previous </a>
                 <a class="nk-pagination-center" href="#">
                     <span class="nk-icon-squares"></span>
